RESOLVED FIXED256329
Ignore public suffixes when checking whether to apply adjustments in `Document::urlForBindings`
https://bugs.webkit.org/show_bug.cgi?id=256329
Summary Ignore public suffixes when checking whether to apply adjustments in `Documen...
Wenson Hsieh
Reported 2023-05-04 12:21:02 PDT
Attachments
Wenson Hsieh
Comment 1 2023-05-04 12:28:42 PDT
EWS
Comment 2 2023-05-04 23:03:51 PDT
Committed 263711@main (777ad4c846a8): <https://commits.webkit.org/263711@main> Reviewed commits have been landed. Closing PR #13454 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.