Ignore public suffixes when checking whether to apply adjustments in `Document::urlForBindings` https://bugs.webkit.org/show_bug.cgi?id=256329 rdar://108691950

Reviewed by Aditya Keerthi.

In a similar vein to 262965@main, discount public suffixes when determining whether or not we should
adjust `urlForBindings`, as long as the top level domain otherwise matches. This patch pulls that
previously introduced logic out into a separate lambda function, and consults it in both places.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::urlForBindings const):

Canonical link: https://commits.webkit.org/263711@main